--- a/nosotros.html
+++ b/nosotros.html
@@ -137,7 +137,8 @@
                   </div>
                       <div class="col-lg-4 col-md-6">
                           <h1>Sobre nosotros</h1>
-                          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
+                          <p>Agrupación de vecinos enfocada a la venta de productos de jardinaría sin fines de lucro.<br>
+                            Buscamos ayudar a diversas fundaciones, te invitamos a ser parte de esto.</p>
                           <p>&copy; Copyrights. All rights reserved. <a class="text-primary" href="#">CasoB</a></p>
                       </div>
                       <div class="col-lg-2 col-md-6">
