--- a/faq.html
+++ b/faq.html
@@ -3,50 +3,53 @@
     <head>
     <meta charset="UTF-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>CASO B</title>
+    <title>Plankton - FAQ</title>
     <link rel="stylesheet" href="css/estilo.css">
     </head>
     <body>
       <!-- NAVBAR -->
-        <nav class="navbar navbar-expand-lg py-3 navbar-dark bg-dark shadow-sm">
-            <div class="container-fluid">
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <a class="navbar-brand" href="#">
-                  <img src="img/logo.png" width="45" alt="" class="d-inline-block align-middle mr-2">
-                  <span class="text-uppercase font-weight-bold"></span>CASO B</a>
-                  
-              <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="index.html">Inicio</a>
-                  </li>
-                  <li class="nav-item dropdown">
+      <nav class="navbar navbar-expand-lg py-3 navbar-dark bg-dark shadow-sm">
+        <div class="container-fluid">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <a class="navbar-brand" href="#">
+              <img src="img/logo.png" width="45" alt="" class="d-inline-block align-middle mr-2">
+              <span class="text-uppercase font-weight-bold"></span>Plankton</a>
+              
+          <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="index.html">Inicio</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Tienda
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
+                  <li><a class="dropdown-item" href="tienda.html">Ofertas</a></li>
+                  <li><a class="dropdown-item" href="tienda.html">Categorías</a></li>
+                </ul>
+                <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Tienda
+                      Usuario
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
-                      <li><a class="dropdown-item" href="tienda.html">Ofertas</a></li>
-                      <li><a class="dropdown-item" href="tienda.html">Categorías</a></li>
+                      <li><a class="dropdown-item" href="#">Iniciar sesión</a></li>
+                      <li><hr class="dropdown-divider"></li>
+                      <li><a class="dropdown-item" href="#">Registrarse</a></li>
                     </ul>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                          Usuario
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
-                          <li><a class="dropdown-item" href="#">Iniciar sesión</a></li>
-                          <li><hr class="dropdown-divider"></li>
-                          <li><a class="dropdown-item" href="#">Registrarse</a></li>
-                        </ul>
-                  <li class="nav-item">
-                    <a class="nav-link" href="nosotros.html">Nosotros</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </nav>
-          <!-- TERMINA NAVBAR -->
+              <li class="nav-item">
+                <a class="nav-link" href="nosotros.html">Nosotros</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="donacion.html">Donar</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+      <!-- TERMINA NAVBAR -->
 
           <!-- AQUÍ PON TU CÓDIGO -->
   <br>
@@ -94,9 +97,9 @@
               </div>
                   <div class="col-lg-4 col-md-6">
                       <h1>Sobre nosotros</h1>
-                      <p>Agrupación de vecinos enfocada a la venta de productos de jardinaría sin fines de lucro.<br>
+                      <p>Somos Plankton. Una agrupación de vecinos enfocada a la venta de productos de jardinaría sin fines de lucro.<br>
                         Buscamos ayudar a diversas fundaciones, te invitamos a ser parte de esto.</p>
-                      <p>&copy; Copyrights. All rights reserved. <a class="text-primary" href="#">CasoB</a></p>
+                      <p>&copy; Copyrights. All rights reserved. <a class="text-primary" href="#">Plankton</a></p>
                   </div>
                   <div class="col-lg-2 col-md-6">
                       <h5>Menu</h5>
@@ -121,6 +124,8 @@
                           </ul>
                         <li><a href="nosotros.html">Nosotros</a></li>
                         <li><a href="faq.html">FAQ</a></li>
+                        <li><a href="donacion.html">Donar</a></li>
+                        <li><a href="Contacto.html">Contáctanos</a></li>
                       </ul>
                   </div>
                   <div class="col-lg-2 col-md-6">
