--- a/pagoexitoso.html
+++ b/pagoexitoso.html
@@ -51,132 +51,21 @@
       </nav>
       <!-- TERMINA NAVBAR -->
 
-    <!-- Carousel -->
-<div id="demo" class="carousel slide" data-bs-ride="carousel">
+      <br>
+      <section class="PagoSuccess">
+        <div class="container" style="width: 100%; background-color: #73aa8c; padding: 30px; border-radius: 10px;">
+          <h1 style="text-align:center;">El pago se ha realizado con éxito</h1>
+          <hr class="rounded">
+          <br>
+          <div>
+          <img src="img/check.png" style="left: 35%; max-width: 30%;" alt=""></div>
+          <br><br>
+          <div style="text-align:center;"><button class="btn btn-primary" onclick="window.location.href='index.html'">Aceptar</button></div> 
+        
+        </div>
 
-    <!-- Indicators/dots -->
-    <div class="carousel-indicators">
-      <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
-      <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
-    </div>
-  
-    <!-- The slideshow/carousel -->
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img class="img-fluid" src="img/planta.jpg" alt="Planta">
-        <div class="carousel-caption">
-            <h1 style="color:white;">¿Quiénes somos?</h1>
-            <p>Somos una agrupación formada el año 2020 sin fines de lucro. Nuestro objetivo es ofrecer los mejores productos de jardinería a nuestros clientes. Nos esforzamos día a día por hacer de Plankton una mejor empresa. ¡Siéntete líbre de contactarnos!</p>
-          </div>
-      </div>
-      <div class="carousel-item">
-        <img class="img-fluid" src="img/maceteros.jpg" alt="Macetero">
-        <div class="carousel-caption">
-          <h1 style="color:white;">Tienda</h1>
-            <p>Echa un vistazo a todos los productos que ofrecemos</p>
-          </div>
-      </div>
-    </div>
-  
-    <!-- Left and right controls/icons -->
-    <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon"></span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
-      <span class="carousel-control-next-icon"></span>
-    </button>
-  </div>
-  <br><br><br>
-  <hr class="rounded">
-  <div id="ofertas" class="ofertas">
-    <br>
-    <h1>OFERTAS DESTACADAS</h1>
-    <hr class="rounded">
-    <br>
-    <div class="deck">
-    <div class="card" style="width: 18rem; margin-top: 2%;">
-        <img src="img/prod-pala.jpg" class="card-img-top" alt="..." style="border-radius:50px; padding:20px;">
-        <div class="card-body">
-          <h5 class="card-title">PALA DE JARDÍN</h5>
-          <p class="card-text"><b>Precio: </b> <del>19.990</del> 9.990<br><b>Estado: </b>Nuevo<br><b>Marca: </b>Gardena
-          </p>
-          <a href="producto.html" class="btn btn-primary">Ir al producto</a>
-        </div>
-      </div>
-      <div class="card" style="width: 18rem; margin-top: 2%;">
-        <img src="img/prod-narciso.jpg" class="card-img-top" alt="..." style="border-radius:50px; padding:20px;">
-        <div class="card-body">
-          <h5 class="card-title">NARCISO</h5>
-          <p class="card-text"><b>Precio: </b> <del>12.990</del> 5.990<br><b>Estado: </b>Nuevo<br><b>Dimensiones: </b>10x10cm
-          </p>
-          <a href="producto.html" class="btn btn-primary">Ir al producto</a>
-        </div>
-      </div>
-      <div class="card" style="width: 18rem; margin-top: 2%;">
-        <img src="img/prod-jacinto.jpg" class="card-img-top" alt="..." style="border-radius:50px; padding:20px;">
-        <div class="card-body">
-          <h5 class="card-title">JACINTO</h5>
-          <p class="card-text"><b>Precio: </b> <del>5.990</del> 3.990<br><b>Estado: </b>Nuevo<br><b>Dimensiones: </b>10x10cm
-          </p>
-          <a href="producto.html" class="btn btn-primary">Ir al producto</a>
-        </div>
-      </div>
-      <div class="card" style="width: 18rem; margin-top: 2%;">
-        <img src="img/prod-regadora.jpg" class="card-img-top" alt="..." style="border-radius:50px; padding:20px;">
-        <div class="card-body">
-          <h5 class="card-title">REGADORA 5L</h5>
-          <p class="card-text"><b>Precio: </b> <del>9.990</del> 7.990<br><b>Estado: </b>Nuevo<br><b>Marca: </b>Genérico
-          </p>
-          <a href="producto.html" class="btn btn-primary">Ir al producto</a>
-        </div>
-      </div>
-    </div></div>
 
-    <!-- NOSOTROS -->
-    <br><br><br>
-    <hr class="rounded">
-    <br>
-    <div id="nosotros" class="nosotros">
-    <h1>ACERCA DE NOSOTROS</h1>
-    <hr class="rounded">
-    <br>
-    <H6 class="txtnosotros">Somos una compañía formada el año 2020 sin fines de lucro. Nuestro objetivo es ofrecer los mejores productos de jardinería a nuestros clientes. Nos esforzamos día a día por hacer de Caso B una mejor empresa. ¡Siéntete líbre de contactarnos!
-  </H6>
-  <br>
-  <a href="nosotros.html" class="btn btn-primary">Leer más</a>
-  
-  </div>
-    <br><br>
 
-    <hr class="rounded">
-    <br>
-    <!-- CATEGORÍA -->
-    <div id="categorias" class="categorias">
-     <H1>CATEGORÍAS</H1>
-     <hr class="rounded">
-     <br>
-     <div class="deck" style="display:inline-flex;">
-      <!-- TODO -->
-      <div class="container" style="max-width: 300px; margin-top: 2%;">
-        <a href="tienda.html">
-          <img src="img/cat-todo.jpg" alt="Avatar" class="image">
-          <div class="overlay">Ir a todo</a></div></div>
-          <!-- OFERTAS -->
-        <div class="container" style="max-width: 300px; margin-top: 2%;">
-          <a href="#ofertas">
-          <img src="img/cat-ofertas.jpg" alt="Avatar" class="image">
-          <div class="overlay">Ir a ofertas</a></div></div>
-          <!-- HERRAMIENTAS -->
-        <div class="container" style="max-width: 300px; margin-top: 2%;">
-          <a href="tienda.html">
-          <img src="img/cat-herramientas.jpg" alt="Avatar" class="image">
-          <div class="overlay">Ir a herramientas</a></div></div>
-          <!-- PLANTAS -->
-        <div class="container" style="max-width: 300px; margin-top: 2%;">
-          <a href="tienda.html">
-          <img src="img/cat-plantas.jpg" alt="Avatar" class="image">
-          <div class="overlay">Ir a plantas</a></div></div>
-    </div>
   </div>
     <br><br>
     
