--- a/donacion.html
+++ b/donacion.html
@@ -38,7 +38,7 @@
                       Usuario
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
-                      <li><a class="dropdown-item" href="#">Iniciar sesión</a></li>
+                      <li><a class="dropdown-item" data-toggle="modal" data-bs-toggle="modal" href="#ModalForm">Iniciar sesión</a></li>
                       <li><hr class="dropdown-divider"></li>
                       <li><a class="dropdown-item" href="#">Registrarse</a></li>
                     </ul>
@@ -241,53 +241,57 @@
         </section>
         <br>
         <!-- FOOTER MENU -->
-          <footer class="w-100 py-4 flex-shrink-0">
-              <div class="container py-4">
-                  <div class="row gy-4 gx-5">
-                    <div class="col-lg-4 col-md-6">
-                      <img class="img-fluid" src="img/logo.png" width="50%" height="50%">
+        <footer class="w-100 py-4 flex-shrink-0">
+          <div class="container py-4">
+              <div class="row gy-4 gx-5">
+                <div class="col-lg-4 col-md-6">
+                  <img class="img-fluid" src="img/logo.png" width="50%" height="50%">
+              </div>
+                  <div class="col-lg-4 col-md-6">
+                      <h1>Sobre nosotros</h1>
+                      <p>Somos Plankton. Una agrupación de vecinos enfocada a la venta de productos de jardinaría sin fines de lucro.<br>
+                        Buscamos ayudar a diversas fundaciones, te invitamos a ser parte de esto.</p>
+                      <p>&copy; Copyrights. All rights reserved. <a class="text-primary" href="#">Plankton</a></p>
                   </div>
-                      <div class="col-lg-4 col-md-6">
-                          <h1>Sobre nosotros</h1>
-                          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
-                          <p>&copy; Copyrights. All rights reserved. <a class="text-primary" href="#">CasoB</a></p>
-                      </div>
-                      <div class="col-lg-2 col-md-6">
-                          <h5>Menu</h5>
-                          <ul class="list-unstyled text-muted">
-                            <li><a href="#">Inicio</a></li>
-                            <li class="item dropdown">
-                              <a class="link dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                Tienda
-                              </a>
-                              <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
-                                <li><a class="dropdown-item" href="#ofertas">Ofertas</a></li>
-                                <li><a class="dropdown-item" href="#">Categorías</a></li>
-                              </ul>
-                            <li class="item dropdown">
-                              <a class="link dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                Usuario
-                              </a>
-                              <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
-                                <li><a class="dropdown-item" href="#">Iniciar sesión</a></li>
-                                <li><hr class="dropdown-divider"></li>
-                                <li><a class="dropdown-item" href="#">Registrarse</a></li>
-                              </ul>
-                            <li><a href="#nosotros">Nosotros</a></li>
+                  <div class="col-lg-2 col-md-6">
+                      <h5>Menu</h5>
+                      <ul class="list-unstyled text-muted">
+                        <li><a href="index.html">Inicio</a></li>
+                        <li class="item dropdown">
+                          <a class="link dropdown-toggle" href="" id="navbarScrollingDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Tienda
+                          </a>
+                          <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
+                            <li><a class="dropdown-item" href="tienda.html">Ofertas</a></li>
+                            <li><a class="dropdown-item" href="tienda.html">Categorías</a></li>
                           </ul>
-                      </div>
-                      <div class="col-lg-2 col-md-6">
-                          <h5>Contacto</h5>
-                          <ul class="list-unstyled text-muted">
-                              <li>Fono: +56945215603</li>
-                              <li>Instagram: @CasoB</li>
-                              <li>Facebook: @CasoB</li>
-                              <li>Mail: casob@duocuc.cl</li>
+                        <li class="item dropdown">
+                          <a class="link dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Usuario
+                          </a>
+                          <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
+                            <li><a class="dropdown-item" href="#">Iniciar sesión</a></li>
+                            <li><hr class="dropdown-divider"></li>
+                            <li><a class="dropdown-item" href="#">Registrarse</a></li>
                           </ul>
-                      </div>
+                        <li><a href="nosotros.html">Nosotros</a></li>
+                        <li><a href="faq.html">FAQ</a></li>
+                        <li><a href="donacion.html">Donar</a></li>
+                        <li><a href="Contacto.html">Contáctanos</a></li>
+                      </ul>
+                  </div>
+                  <div class="col-lg-2 col-md-6">
+                      <h5>Contacto</h5>
+                      <ul class="list-unstyled text-muted">
+                          <li>Fono: +56945215603</li>
+                          <li>Instagram: @CasoB</li>
+                          <li>Facebook: @CasoB</li>
+                          <li>Mail: casob@duocuc.cl</li>
+                      </ul>
                   </div>
               </div>
-          </footer>
+          </div>
+      </footer>
 
     
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
