--- a/nosotros.html
+++ b/nosotros.html
@@ -35,7 +35,7 @@
                   Usuario
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
-                  <li><a class="dropdown-item" href="#">Iniciar sesión</a></li>
+                  <li><a class="dropdown-item" data-toggle="modal" data-bs-toggle="modal" href="#ModalForm">Iniciar sesión</a></li>
                   <li><hr class="dropdown-divider"></li>
                   <li><a class="dropdown-item" href="#">Registrarse</a></li>
                 </ul>
