--- a/donacion.html
+++ b/donacion.html
@@ -105,7 +105,7 @@
           
                 <!--Grid column-->
                 <div>
-                    <form id="donation-form" name="donation-form" action="index.html" method="POST">
+                    <form id="donation-form" name="donation-form" action="pagoexitoso.html" method="POST">
           
                         <!--Grid row-->
                         <div class="row">      
